--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.47.12",
     "dotenv": "^16.4.7",
+    "expo-server-sdk": "^4.0.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^7.0.0",
     "resend": "^4.0.1"
