``` docs: add comprehensive extract-receipt function documentation
- Added extract-receipt to available Supabase functions list
- Documented AI-powered receipt extraction workflow and API usage
- Added request/response examples with structured JSON schema
- Listed supported AI models via OpenRouter (NVIDIA Nemotron, GPT-4, Claude, Gemini)
- Documented automatic item categorization and confidence scoring
- Added deployment and testing instructions
- Included OPENROUTER_API_KEY in environment variables documentation

--- a/supabase-functions/.env.example
+++ b/supabase-functions/.env.example
@@ -4,3 +4,6 @@ R2_ACCESS_KEY=your-r2-access-key-id
 R2_SECRET_KEY=your-r2-secret-access-key
 R2_BUCKET=your-bucket-name
 R2_PUBLIC_BASE=https://your-public-domain.com
+
+#AI Configuration
+OPENROUTER_API_KEY=your-openrouter-api-key
